--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 header {
     background-color: rgba(16,112,163,255);
-    color: white;
+    color: #f0f0f0;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
