--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
-    margin: 0;
     font-family: Arial, sans-serif;
+    margin: 0.5rem; 
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0e1; 
+    border-radius: 1rem; 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); 
+    padding: 1rem; 
 }
 
 header {
