--- a/style.css
+++ b/style.css
@@ -1,21 +1,38 @@
+html {
+    background-color: rgb(161, 161, 161);
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0.5rem; 
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0e1; 
+    background-color: #f0f0f0; 
     border-radius: 1rem; 
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); 
-    padding: 1rem; 
+    padding: 1rem;   
 }
 
 header {
-    background-color: rgba(16,112,163,255);
+    position: absolute;
+    background-color: rgb(44, 78, 107);
     color: #f0f0f0;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     text-align: center;
-    width: 100%;
+    top: 5%;
+    left: 5%;
+    right: 5%;
+}
+
+header h4{
+    margin-top: -1rem;
+}
+
+header > div {
+    display: flex;
+    flex: 1;
+    justify-content: center;
 }
 
 #header {
@@ -25,7 +42,6 @@ header {
 main {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .container {
@@ -36,19 +52,29 @@ main {
 #left_column, #right_column {
     flex: 1;
     padding: 20px;
-    align-content: center;
+    padding-top: 400px;
     
 }
 
 #left_column {
     background-color: #3d3c3c;
     color: #f0f0f0;
+    
+}
+
+#left_column h2 {
+    margin-bottom: -0.5rem;
+}
+
+#right_column h2 {
+    margin-bottom: -0.5rem;
+}
+
+#liste_competences {
+    margin-top: -0.5rem;
 }
 
 #right_column {
-    background-color: #f0f0f0;
+    background-color: #e7e7e7;
 }
 
-h2 {
-    text-decoration: underline;
-}
