--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background-color: #f0f0f0; 
     border-radius: 1rem; 
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); 
-    padding: 1rem;   
+    padding: calc(2vw - 8px);   
 }
 
 header {
@@ -20,9 +20,9 @@ header {
     align-items: center;
     justify-content: flex-start;
     text-align: center;
-    top: 5%;
-    left: 5%;
-    right: 5%;
+    top: 2vw;
+    left: 2vw;
+    right: 2vw;
 }
 
 header h4{
@@ -78,9 +78,32 @@ main {
     background-color: #e7e7e7;
 }
 
+@media screen and (max-width: 1100px) {
+    body{
+        padding: calc(4vw - 8px);  
+    }
+    header {
+        top: 4vw;
+        left: 4vw;
+        right: 4vw;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    body{
+        padding: calc(5vw - 8px);  
+    }
+    header {
+        top: 5vw;
+        left: 5vw;
+        right: 5vw;
+    }
+}
+
 @media screen and (max-width: 830px) {
     #header {
         font-size: 90%;
+
     }
     header img{
         height: 250px;
@@ -140,5 +163,4 @@ main {
         padding-left: 2%;
         
     }
-
 }
