--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ html {
 body {
     font-family: Arial, sans-serif;
     margin: 0.5rem; 
-    font-family: Arial, sans-serif;
     background-color: #f0f0f0; 
     border-radius: 1rem; 
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); 
-    padding: calc(2vw - 8px);   
+    padding: calc(2vw - 8px);  
+    font-size: 120%; 
 }
 
 header {
@@ -23,6 +23,11 @@ header {
     top: 2vw;
     left: 2vw;
     right: 2vw;
+}
+
+header img {
+    height: 350px;
+    
 }
 
 header h4{
@@ -70,7 +75,7 @@ main {
     margin-bottom: -0.5rem;
 }
 
-#liste_competences {
+.liste_competences {
     margin-top: -0.5rem;
 }
 
@@ -87,6 +92,9 @@ main {
         left: 4vw;
         right: 4vw;
     }
+    header img{
+        height: 300px;
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -97,6 +105,10 @@ main {
         top: 5vw;
         left: 5vw;
         right: 5vw;
+    }
+    header img{
+        height: 280px;
+        margin-right: 0.5rem;
     }
 }
 
@@ -125,6 +137,11 @@ main {
         padding-top: 300px;
         
     }
+
+    body {
+        font-size: 120%;
+    }
+
 }
 
 @media screen and (max-width: 735px) {
@@ -140,10 +157,16 @@ main {
     }
     header img{
         height: 180px;
+        margin: 0.5rem;
     }
     #left_column, #right_column {
-        padding-top: 270px;
+        padding-top: 230px;
+        padding-right: 0%;
+        padding-left: 2%;
     }
+    body{
+        font-size: 100%;
+    };
 }
 
 @media screen and (max-width : 500px) {
@@ -159,8 +182,32 @@ main {
 
     #left_column, #right_column {
         padding-top: 200px;
-        padding-right: 0%;
-        padding-left: 2%;
-        
+        font-size: 80%;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    #left_column, #right_column {
+        font-size: 80%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    #header {
+        font-size: 50%;
+    }
+
+    header h4 {
+        padding-top: 0.4rem;
+    }
+    #left_column, #right_column {
+        padding-top: 160px;
+        font-size: 70%;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    #left_column, #right_column {
+        padding-top: 165px;
     }
 }
