--- a/style.css
+++ b/style.css
@@ -103,6 +103,39 @@ main {
     background-color: #e7e7e7;
 }
 
+@media print {
+    body {
+        background: white !important;
+        color: black !important;
+        font-size: 12pt;
+        margin: 0;
+        padding: 0;
+        box-shadow: none;
+        font-size: 0.85rem;
+    }
+
+    header {
+        position: static;
+        background: none;
+        color: black;
+        box-shadow: none;
+    }
+
+    header img {
+        height: 120px;
+    }
+
+    #search {
+        display: none !important;
+    }
+
+    #left_column, #right_column {
+        padding-top: 1rem;
+        background: none;
+        color: black;
+    }
+}
+
 @media screen and (max-width: 1100px) {
     body{
         padding: calc(4vw - 8px);  
